endpoints to work with products and customers
