# internal/http-server/jwt_token/jwt_token.go
@@ -3,7 +3,6 @@ package jwt_token
 import (
 	"fmt"
 	"github.com/dgrijalva/jwt-go"
-	"net/http"
 	"strings"
 	"time"
 )
@@ -15,44 +14,52 @@ const (
 	signedKey = "very_secret_key"
 )
 
-type claimsWithId struct {
+const (
+	RoleAdmin    = "admin"
+	RoleCustomer = "customer"
+)
+
+type extendedClaims struct {
 	jwt.StandardClaims
-	Id int `json:"id"`
+	Id    int    `json:"id"`
+	Role  string `json:"role"`
+	Alias string `json:"alias"`
 }
 
-func GenerateToken(id int) (string, error) {
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, &claimsWithId{
+func GenerateToken(id int, role, alias string) (string, error) {
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, &extendedClaims{
 		StandardClaims: jwt.StandardClaims{
 			ExpiresAt: time.Now().Add(tokenTTL).Unix(),
 			IssuedAt:  time.Now().Unix(),
 		},
-		Id: id,
+		Id:    id,
+		Role:  role,
+		Alias: alias,
 	})
 
 	return token.SignedString([]byte(signedKey))
 }
 
-func ParseToken(t string) (int, error) {
-	token, err := jwt.ParseWithClaims(t, &claimsWithId{}, func(token *jwt.Token) (interface{}, error) {
+func ParseToken(t string) (id int, role, alias string, err error) {
+	token, err := jwt.ParseWithClaims(t, &extendedClaims{}, func(token *jwt.Token) (interface{}, error) {
 		if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
 			return nil, fmt.Errorf("invalid signin method")
 		}
 		return []byte(signedKey), nil
 	})
 	if err != nil {
-		return 0, err
+		return 0, "", "", err
 	}
 
-	claims, ok := token.Claims.(*claimsWithId)
+	claims, ok := token.Claims.(*extendedClaims)
 	if !ok {
-		return 0, fmt.Errorf("invalid token claims")
+		return 0, "", "", fmt.Errorf("invalid token claims")
 	}
 
-	return claims.Id, nil
+	return claims.Id, claims.Role, claims.Alias, nil
 }
 
-func GetTokenFromRequest(r *http.Request) (string, error) {
-	auth := r.Header.Get("Authorization")
+func GetTokenFromRequest(auth string) (string, error) {
 	authParts := strings.Split(auth, " ")
 	if len(authParts) != 2 {
 		return "", fmt.Errorf("invalid token")
